# roo-code-rust

./: .gitignore  Cargo.toml
.cargo/: config.toml
crates/roo-app/: Cargo.toml
crates/roo-app/src/: app.rs  config.rs  error.rs  lib.rs  state.rs
crates/roo-auto-approval/: Cargo.toml
crates/roo-auto-approval/src/: approval.rs  commands.rs  lib.rs  tools.rs  types.rs
crates/roo-checkpoint/: Cargo.toml
crates/roo-checkpoint/src/: error.rs  excludes.rs  lib.rs  repo_per_task.rs  service.rs  types.rs
crates/roo-cli/: Cargo.toml
crates/roo-cli/src/: main.rs
crates/roo-cloud/: Cargo.toml
crates/roo-cloud/src/: cloud_api.rs  cloud_settings_service.rs  cloud_share_service.rs  config.rs  lib.rs  refresh_timer.rs  retry_queue.rs  service.rs  static_settings_service.rs  static_token_auth_service.rs  telemetry_client.rs  types.rs  utils.rs  web_auth_service.rs
crates/roo-command/: Cargo.toml
crates/roo-command/src/: frontmatter.rs  lib.rs  loader.rs  scanner.rs  types.rs  utils.rs
crates/roo-condense/: Cargo.toml
crates/roo-condense/src/: cleanup.rs  convert.rs  history.rs  lib.rs  summarize.rs  transform.rs
crates/roo-config/: Cargo.toml
crates/roo-config/src/: auto_import_settings.rs  context_proxy.rs  error.rs  filesystem.rs  git_utils.rs  import_export.rs  lib.rs  loader.rs  migrate_settings.rs  network_proxy.rs  paths.rs  provider_settings_manager.rs  safe_write_json.rs
crates/roo-context/: Cargo.toml
crates/roo-context-tracking/: Cargo.toml
crates/roo-context-tracking/src/: lib.rs  store.rs  tracker.rs  types.rs
crates/roo-context/src/: lib.rs  management.rs  tiktoken.rs  token.rs  truncation.rs
crates/roo-custom-tools/: Cargo.toml
crates/roo-custom-tools/src/: lib.rs  loader.rs  registry.rs  types.rs
crates/roo-diff/: Cargo.toml
crates/roo-editor/: Cargo.toml
crates/roo-editor/src/: diff_view.rs  export_markdown.rs  extract_text.rs  extract_xlsx.rs  file_editor.rs  image_handler.rs  indentation_reader.rs  lib.rs  line_counter.rs  read_lines.rs  types.rs  undo_stack.rs
crates/roo-environment/: Cargo.toml
crates/roo-environment/src/: details.rs  lib.rs  reminder.rs  terminal.rs  time.rs  types.rs
crates/roo-i18n/: Cargo.toml
crates/roo-i18n/src/: lib.rs  loader.rs  translations.rs  types.rs
crates/roo-ignore/: Cargo.toml
crates/roo-ignore/src/: constants.rs  controller.rs  lib.rs  patterns.rs
crates/roo-index/: Cargo.toml
crates/roo-index/src/: cache_manager.rs  config_manager.rs  embedder.rs  lib.rs  manager.rs  orchestrator.rs  processor.rs  search_service.rs  service_factory.rs  state_manager.rs  types.rs
crates/roo-jsonrpc/: Cargo.toml
crates/roo-jsonrpc/src/: batch.rs  codec.rs  id.rs  lib.rs  types.rs  validator.rs
crates/roo-marketplace/: Cargo.toml
crates/roo-marketplace/src/: lib.rs  marketplace.rs  remote_config_loader.rs  simple_installer.rs  types.rs
crates/roo-mcp/: Cargo.toml
crates/roo-mcp/src/: client.rs  config.rs  error.rs  hub.rs  lib.rs  manager.rs  name_utils.rs  transport.rs  types.rs
crates/roo-mdm/: Cargo.toml
crates/roo-mentions/: Cargo.toml
crates/roo-mentions/src/: file_content.rs  format.rs  lib.rs  parser.rs  processor.rs  providers.rs  regex.rs  types.rs
crates/roo-message-manager/: Cargo.toml
crates/roo-message-manager/src/: artifact.rs  cleanup.rs  lib.rs  manager.rs  types.rs
crates/roo-message-queue/: Cargo.toml
crates/roo-message-queue/src/: lib.rs  queue.rs  types.rs
crates/roo-modes/: Cargo.toml
crates/roo-modes/src/: custom_modes_manager.rs  helpers.rs  lib.rs  restriction.rs  selection.rs  tools.rs
crates/roo-prompt/: Cargo.toml
crates/roo-prompt/src/: lib.rs  responses.rs  system.rs  types.rs
crates/roo-prompt/src/sections/: capabilities.rs  custom_instructions.rs  markdown_formatting.rs  mod.rs  modes.rs  objective.rs  rules.rs  skills.rs  system_info.rs  tool_use.rs  tool_use_guidelines.rs
crates/roo-protect/: Cargo.toml
crates/roo-provider/: Cargo.toml
crates/roo-provider-anthropic/: Cargo.toml
crates/roo-provider-aws/: Cargo.toml
crates/roo-provider-aws/src/: bedrock_events.rs  handler.rs  lib.rs  models.rs  signing.rs  types.rs
crates/roo-provider-baseten/: Cargo.toml
crates/roo-provider-deepseek/: Cargo.toml
crates/roo-provider-fireworks/: Cargo.toml
crates/roo-provider-google/: Cargo.toml
crates/roo-provider-litellm/: Cargo.toml
crates/roo-provider-lmstudio/: Cargo.toml
crates/roo-provider-minimax/: Cargo.toml
crates/roo-provider-minimax/src/: handler.rs  lib.rs  models.rs  types.rs
crates/roo-provider-mistral/: Cargo.toml
crates/roo-provider-moonshot/: Cargo.toml
crates/roo-provider-ollama/: Cargo.toml
crates/roo-provider-openai/: Cargo.toml
crates/roo-provider-openai-native/: Cargo.toml
crates/roo-provider-openai-native/src/: codex_handler.rs  handler.rs  lib.rs  models.rs  responses_api.rs  types.rs
crates/roo-provider-openrouter/: Cargo.toml
crates/roo-provider-poe/: Cargo.toml
crates/roo-provider-qwen/: Cargo.toml
crates/roo-provider-requesty/: Cargo.toml
crates/roo-provider-roo/: Cargo.toml
crates/roo-provider-sambanova/: Cargo.toml
crates/roo-provider-unbound/: Cargo.toml
crates/roo-provider-vercel/: Cargo.toml
crates/roo-provider/src/: base_provider.rs  cost.rs  error.rs  fetcher.rs  handler.rs  lib.rs  metrics.rs  openai_compatible.rs  single_completion.rs  vertex_auth.rs
crates/roo-provider/src/transform/: ai_sdk.rs  anthropic_filter.rs  bedrock_converse_format.rs  cache_strategy.rs  caching.rs  gemini_format.rs  image_cleaning.rs  minimax_format.rs  mistral_format.rs  mod.rs  model_params.rs  openai_format.rs  r1_zai_format.rs  reasoning.rs  responses_api.rs  responses_api_stream.rs  stream.rs  vscode_lm_format.rs
crates/roo-server/: Cargo.toml
crates/roo-server/src/: aggregate_task_costs.rs  checkpoint_restore_handler.rs  diagnostics_handler.rs  error.rs  generate_system_prompt.rs  handler.rs  lib.rs  message_enhancer.rs  router.rs  server.rs  skills_message_handler.rs  transport.rs  webview_message_handler.rs
plans/: roo-code-rust-rewrite-plan.md
(+281 files in other folders)
