[workspace]
resolver = "2"
members = [
    "crates/roo-types",
    "crates/roo-jsonrpc",
    "crates/roo-provider",
    "crates/roo-provider-anthropic",
    "crates/roo-provider-openai",
    "crates/roo-provider-google",
    "crates/roo-provider-aws",
    "crates/roo-provider-openrouter",
    "crates/roo-provider-ollama",
    "crates/roo-provider-deepseek",
    "crates/roo-provider-xai",
    "crates/roo-provider-minimax",
    "crates/roo-provider-moonshot",
    "crates/roo-provider-qwen",
    "crates/roo-provider-zai",
    "crates/roo-provider-mistral",
    "crates/roo-provider-fireworks",
    "crates/roo-provider-sambanova",
    "crates/roo-provider-baseten",
    "crates/roo-provider-vscode-lm",
    "crates/roo-provider-poe",
    "crates/roo-provider-litellm",
    "crates/roo-provider-requesty",
    "crates/roo-provider-unbound",
    "crates/roo-provider-roo",
    "crates/roo-provider-vercel",
    "crates/roo-tools",
    "crates/roo-tools-fs",
    "crates/roo-tools-command",
    "crates/roo-tools-mcp",
    "crates/roo-tools-search",
    "crates/roo-tools-mode",
    "crates/roo-tools-misc",
    "crates/roo-mcp",
    "crates/roo-task",
    "crates/roo-prompt",
    "crates/roo-context",
    "crates/roo-condense",
    "crates/roo-checkpoint",
    "crates/roo-diff",
    "crates/roo-index",
    "crates/roo-skills",
    "crates/roo-modes",
    "crates/roo-config",
    "crates/roo-telemetry",
    "crates/roo-cloud",
    "crates/roo-i18n",
    "crates/roo-ignore",
    "crates/roo-protect",
    "crates/roo-terminal",
    "crates/roo-editor",
    "crates/roo-marketplace",
    "crates/roo-mdm",
    "crates/roo-command",
    "crates/roo-worktree",
    "crates/roo-custom-tools",
    "crates/roo-mentions",
    "crates/roo-environment",
    "crates/roo-message-manager",
    "crates/roo-message-queue",
    "crates/roo-task-persistence",
    "crates/roo-context-tracking",
    "crates/roo-auto-approval",
    "crates/roo-app",
    "crates/roo-server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/roo-code/rust"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
pin-project-lite = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
eventsource-stream = "0.2"
http = "1"

# Streaming
tokio-stream = "0.1"

# Schema
schemars = "0.8"
jsonschema = "0.26"

# Git
git2 = { version = "0.20", default-features = false }

# File watching
notify = "7"

# Regex
regex = "1"

# Token counting
tiktoken-rs = "0.6"

# Diff
similar = "2"
strsim = "0.11"

# Markdown
pulldown-cmark = "0.11"

# Crypto / ID
sha2 = "0.10"
uuid = { version = "1", features = ["v7", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Errors
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# YAML/TOML
toml = "0.8"

# Vector search
instant-distance = "0.2"

# Tree-sitter
tree-sitter = "0.24"

# IPC / JSON-RPC
jsonrpsee = { version = "0.24", features = ["server", "client", "macros"] }

# i18n
fluent = "0.16"
fluent-bundle = "0.15"
unic-langid = "0.9"

# Ignore (like .gitignore)
ignore = "0.4"

# Frontmatter parsing
gray_matter = "0.2"

# Glob
glob = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Base64
base64 = "0.22"

# URL
url = { version = "2", features = ["serde"] }

# Internal crates
roo-types = { path = "crates/roo-types" }
roo-jsonrpc = { path = "crates/roo-jsonrpc" }
roo-provider = { path = "crates/roo-provider" }
roo-prompt = { path = "crates/roo-prompt" }
roo-modes = { path = "crates/roo-modes" }
roo-diff = { path = "crates/roo-diff" }
roo-mcp = { path = "crates/roo-mcp" }
roo-tools = { path = "crates/roo-tools" }
roo-context = { path = "crates/roo-context" }
roo-condense = { path = "crates/roo-condense" }
roo-checkpoint = { path = "crates/roo-checkpoint" }
roo-config = { path = "crates/roo-config" }
roo-task = { path = "crates/roo-task" }
roo-server = { path = "crates/roo-server" }
roo-app = { path = "crates/roo-app" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
