[package]
name = "roo-auto-approval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Auto-approval system for Roo Code Rust"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
