[package]
name = "roo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI interface for Roo Code Rust"

[[bin]]
name = "roo"
path = "src/main.rs"

[dependencies]
roo-types = { path = "../roo-types" }
roo-provider = { path = "../roo-provider" }
roo-provider-anthropic = { path = "../roo-provider-anthropic" }
roo-provider-openai = { path = "../roo-provider-openai" }
roo-task = { path = "../roo-task" }
roo-terminal = { path = "../roo-terminal" }
roo-prompt = { path = "../roo-prompt" }
roo-modes = { path = "../roo-modes" }
roo-tools = { path = "../roo-tools" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
