[package]
name = "roo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI interface for Roo Code Rust"

[[bin]]
name = "roo"
path = "src/main.rs"

[dependencies]
roo-types = { path = "../roo-types" }
roo-app = { path = "../roo-app" }
roo-provider = { path = "../roo-provider" }
roo-provider-anthropic = { path = "../roo-provider-anthropic" }
roo-provider-openai = { path = "../roo-provider-openai" }
roo-provider-openai-native = { path = "../roo-provider-openai-native" }
roo-provider-openrouter = { path = "../roo-provider-openrouter" }
roo-provider-deepseek = { path = "../roo-provider-deepseek" }
roo-provider-google = { path = "../roo-provider-google" }
roo-provider-xai = { path = "../roo-provider-xai" }
roo-provider-mistral = { path = "../roo-provider-mistral" }
roo-provider-fireworks = { path = "../roo-provider-fireworks" }
roo-provider-ollama = { path = "../roo-provider-ollama" }
roo-provider-lmstudio = { path = "../roo-provider-lmstudio" }
roo-provider-litellm = { path = "../roo-provider-litellm" }
roo-provider-qwen = { path = "../roo-provider-qwen" }
roo-provider-minimax = { path = "../roo-provider-minimax" }
roo-provider-poe = { path = "../roo-provider-poe" }
roo-provider-requesty = { path = "../roo-provider-requesty" }
roo-provider-unbound = { path = "../roo-provider-unbound" }
roo-provider-vercel = { path = "../roo-provider-vercel" }
roo-provider-roo = { path = "../roo-provider-roo" }
roo-provider-sambanova = { path = "../roo-provider-sambanova" }
roo-provider-baseten = { path = "../roo-provider-baseten" }
roo-provider-moonshot = { path = "../roo-provider-moonshot" }
roo-provider-zai = { path = "../roo-provider-zai" }
roo-provider-aws = { path = "../roo-provider-aws" }
roo-task = { path = "../roo-task" }
roo-terminal = { path = "../roo-terminal" }
roo-prompt = { path = "../roo-prompt" }
roo-modes = { path = "../roo-modes" }
roo-tools = { path = "../roo-tools" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
