[package]
name = "roo-cloud"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "roo-cloud for Roo Code Rust"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
