[package]
name = "roo-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Configuration management for Roo Code Rust"

[dependencies]
dirs = "6"
tokio = { workspace = true, features = ["fs"] }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
url = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["fs", "rt", "macros"] }
tempfile = "3"
