[package]
name = "roo-context-tracking"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "File context tracking for Roo Code Rust"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
