[package]
name = "roo-custom-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Custom tool registry for Roo Code Rust"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
tempfile = "3"
