[package]
name = "roo-environment"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Environment details generation for Roo Code"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
regex = { workspace = true }

[dev-dependencies]
