[package]
name = "roo-i18n"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Internationalization support for Roo Code"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
