[package]
name = "roo-index"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Code indexing subsystem for Roo Code Rust"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = "3"
