[package]
name = "roo-jsonrpc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON-RPC 2.0 protocol for Roo Code"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
