[package]
name = "roo-marketplace"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "roo-marketplace for Roo Code Rust"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
