[package]
name = "roo-marketplace"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "roo-marketplace for Roo Code Rust"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "time"] }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["fs", "rt", "macros", "time"] }
tempfile = "3"
