[package]
name = "roo-message-manager"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Message management module for Roo Code Rust — handles conversation rewind, cleanup, and truncation"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
