[package]
name = "roo-message-queue"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Message queue service for Roo Code Rust"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
