[package]
name = "roo-provider-aws"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AWS Bedrock provider for Roo Code Rust"

[dependencies]
roo-types = { path = "../roo-types" }
roo-provider = { path = "../roo-provider" }
async-trait = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
eventsource-stream = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hmac = "0.12"
chrono = { workspace = true }
hex = "0.4"
