[package]
name = "roo-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "API provider abstraction layer for Roo Code Rust"

[dependencies]
roo-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
eventsource-stream = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
jsonwebtoken = { workspace = true }
